--- a/.gitignore
+++ b/.gitignore
@@ -170,4 +170,4 @@ poetry.toml
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 # Completed database file
-mushrooms.db
+# mushrooms.db
