--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,7 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+.ipynb_checkpoints/
 
 # IPython
 profile_default/
@@ -169,5 +170,5 @@ poetry.toml
 
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-# Completed database file
-# mushrooms.db
+
+Old_files/
